# nakama_admin_cli

./: .env.example  .gitignore  Cargo.toml  README.md  rpc_function_names.txt  rpc_payload_models.json
src/: main.rs  payload_editor.rs
