[package]
name = "nakama_admin_cli_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
inquire = { version = "0.7.5", features = ["editor"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
